discussion/kv_engine/177800/177800_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

Avoid calling mc_time_clock_tick from AdjustTimeOfDayExecutor

It is currently called from multiple threads when AdjustTimeOfDay
packets are executed which results in TSan reporting a data race. It
is only safe to call it from the event bast thread. To accomplish this
(nicely) we can instead pass the folly EventBase into mc_time which
makes this simple.

Change-Id: If98bd6a48526a67577378ae1b46437b0ec42b418

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-07-26 19:26:01.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-07-26 19:27:34.000000000
Message: 
Patch Set 3:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-26 19:39:34.000000000
Message: 
Patch Set 3: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47978/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/daemon/mc_time.cc(187): error C3861: "scheduleClockTickEvent": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47978/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19144/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mc_time.cc:187:5: error: use of undeclared identifier "scheduleClockTickEvent"; did you mean "runClockTickEvent"? [clang-diagnostic-error]
    scheduleClockTickEvent();
    ^~~~~~~~~~~~~~~~~~~~~~
    runClockTickEvent
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mc_time.h:47:6: note: "runClockTickEvent" declared here
void runClockTickEvent();
     ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19144/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/mc_time.cc:187:5:
error: use of undeclared identifier "scheduleClockTickEvent"; did you mean "runClockTickEvent"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/19144/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40318/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/mc_time.cc:187:5:
error: use of undeclared identifier "scheduleClockTickEvent"; did you mean "runClockTickEvent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/40318/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8830/ : FAILURE

Compile error at [2022-07-26T19:28:35.589Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/daemon/mc_time.cc:187:5:
error: use of undeclared identifier "scheduleClockTickEvent"; did you mean "runClockTickEvent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8830/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21052/ : FAILURE

Compile error at [2022-07-26T19:30:40.925Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/daemon/mc_time.cc:187:5:
error: ?scheduleClockTickEvent? was not declared in this scope; did you mean ?runClockTickEvent??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/21052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22119/ : FAILURE

Compile error at [2022-07-26T19:31:16.747Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/daemon/mc_time.cc:187:5:
error: use of undeclared identifier "scheduleClockTickEvent"; did you mean "runClockTickEvent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/22119/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20298/ : FAILURE

Compile error at [2022-07-26T19:35:26.733Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/daemon/mc_time.cc:187:5:
error: use of undeclared identifier "scheduleClockTickEvent"; did you mean "runClockTickEvent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/20298/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21416/ : FAILURE

Compile error at [2022-07-26T19:31:50.087Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/daemon/mc_time.cc:187:5:
error: ?scheduleClockTickEvent? was not declared in this scope; did you mean ?runClockTickEvent??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/21416/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29447/ : FAILURE

Compile error at [2022-07-26T19:31:21.849Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/daemon/mc_time.cc:187:5:
error: use of undeclared identifier "scheduleClockTickEvent"; did you mean "runClockTickEvent"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/29447/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8927/ : FAILURE

Compile error at [2022-07-26T19:34:59.178Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master/kv_engine/daemon/mc_time.cc:187:5:
error: ?scheduleClockTickEvent? was not declared in this scope; did you mean ?runClockTickEvent??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8927/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/18310/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2022-07-27 06:53:04.000000000
Message: 
Patch Set 3: Code-Review-1

(1 comment)
Line:47, daemon/mc_time.h -> This breaks the naming convention used for everything else in the same module.. it should probably be renamed to mc_run_clock_tick_event()

----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2022-07-27 08:02:35.000000000
MISMATCHED INLINE COMMENT
Line:47, daemon/mc_time.h -> Done
----------------------------------------------------------------------------------------------------------------------
